crates/reinhardt-core/macros/tests/ui/settings/fail/composition_type_without_settings_suffix.rs
use reinhardt_macros::settings;

#[settings(MyCustomConfig)]
pub struct BadSettings;

fn main() {}
