crates/reinhardt-core/macros/tests/ui/settings/fail/composition_type_without_settings_suffix.stderr
error: Type `MyCustomConfig` does not end with `Settings`. Use explicit syntax: `field_name: MyCustomConfig`
 --> tests/ui/settings/fail/composition_type_without_settings_suffix.rs:3:1
  |
3 | #[settings(MyCustomConfig)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
